force-app/main/default/objects/Case/fields/Actual_Case_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Case_Cost__c</fullName>
    <formula>Actual_Hours_Utilized__c * 23</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Case Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>