force-app/main/default/objects/Case/fields/Actual_Hours_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Utilized__c</fullName>
    <label>Actual Hours Utilized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>