force-app/main/default/objects/Case/fields/Additional_Collaborators__c.field-meta.xml
<CustomField>
    <fullName>Additional_Collaborators__c</fullName>
    <description>comma separated email ids of collaborators</description>
    <label>Additional collaborators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>