force-app/main/default/objects/Case/fields/AI_Resolution_Plan__c.field-meta.xml
<CustomField>
    <fullName>AI_Resolution_Plan__c</fullName>
    <label>AI Resolution Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>