force-app/main/default/objects/Case/fields/Annual_Hours_Saved__c.field-meta.xml
<CustomField>
    <fullName>Annual_Hours_Saved__c</fullName>
    <inlineHelpText>How many hours will this solution save the client each year?</inlineHelpText>
    <label>Annual Hours Saved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>