force-app/main/default/objects/Case/fields/Case_Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignee_Email__c</fullName>
    <description>Looks at the Assigned To field and populates the email for quick reference.</description>
    <formula>IF(ISPICKVAL( Team_Member_Assigned__c , &quot;Wahid Khan&quot;), &quot;wahid@thelodestonegroup.com&quot;,
IF(ISPICKVAL(Team_Member_Assigned__c, &quot;Mahesh Gangode&quot;), &quot;mahesh@thelodestonegroup.com&quot;,
IF(ISPICKVAL(Team_Member_Assigned__c, &quot;Erick Daniel Dela Rosa&quot;), &quot;erick@thelodestonegroup.com&quot;,
IF(ISPICKVAL(Team_Member_Assigned__c, &quot;Zack&quot;), &quot;zack@thelodestonegroup.com&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Looks at the Assigned To field and populates the email for quick reference.</inlineHelpText>
    <label>Case Assignee Email</label>
    <type>Text</type>
</CustomField>