force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Scope</fullName>
            </value>
            <value>
                <fullName>Out Scope - Change Request</fullName>
            </value>
            <value>
                <fullName>Out Scope - Good Will</fullName>
            </value>
            <value>
                <fullName>Compliance Requirement</fullName>
            </value>
            <value>
                <fullName>Client Request - Non Critical</fullName>
            </value>
            <value>
                <fullName>Client Request - Critical</fullName>
            </value>
            <value>
                <fullName>Internal Improvement</fullName>
            </value>
            <value>
                <fullName>Bug Fix / Error Recovery</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
                <isActive>false</isActive>
                <label>Bug</label>
            </value>
            <value>
                <fullName>Change Request</fullName>
                <isActive>false</isActive>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>Epic</fullName>
                <isActive>false</isActive>
                <label>Epic</label>
            </value>
            <value>
                <fullName>Feature</fullName>
                <isActive>false</isActive>
                <label>Feature</label>
            </value>
            <value>
                <fullName>Improvement</fullName>
                <isActive>false</isActive>
                <label>Improvement</label>
            </value>
            <value>
                <fullName>Incident</fullName>
                <isActive>false</isActive>
                <label>Incident</label>
            </value>
            <value>
                <fullName>Issue</fullName>
                <isActive>false</isActive>
                <label>Issue</label>
            </value>
            <value>
                <fullName>Research</fullName>
                <isActive>false</isActive>
                <label>Research</label>
            </value>
            <value>
                <fullName>Sub-task</fullName>
                <isActive>false</isActive>
                <label>Sub-task</label>
            </value>
            <value>
                <fullName>Task</fullName>
                <isActive>false</isActive>
                <label>Task</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
            <value>
                <fullName>UserStory</fullName>
                <isActive>false</isActive>
                <label>UserStory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>