force-app/main/default/objects/Case/fields/Case_Contact__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact__c</fullName>
    <formula>Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName &amp; &quot; &quot; &amp; &quot;|&quot; &amp; &quot; &quot; &amp; Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Contact and Title</label>
    <type>Text</type>
</CustomField>