force-app/main/default/objects/Case/fields/Client_ROI__c.field-meta.xml
<CustomField>
    <fullName>Client_ROI__c</fullName>
    <inlineHelpText>What ROI was generated from this solution?</inlineHelpText>
    <label>Client ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>