force-app/main/default/objects/Case/fields/Current_Case_Cost__c.field-meta.xml
<CustomField>
    <fullName>Current_Case_Cost__c</fullName>
    <formula>Hours_Worked_So_Far__c * 23</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Case Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>