force-app/main/default/objects/Case/fields/Customer_Story_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Story_Data__c</fullName>
    <label>Customer Story Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>