force-app/main/default/objects/Case/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <label>Delay</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>