force-app/main/default/objects/Case/fields/Est_Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Est_Time_Remaining__c</fullName>
    <formula>Estimated_Hours_Required__c - Hours_Worked_So_Far__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Time Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>