force-app/main/default/objects/Case/fields/Estimated_Case_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Case_Cost__c</fullName>
    <formula>Estimated_Hours_Required__c * 23</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Case Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>