force-app/main/default/objects/Case/fields/Estimated_Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_Required__c</fullName>
    <label>Estimated Hours Required</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>