force-app/main/default/objects/Case/fields/Estimated_Hours_vs_Actual_Hours_Variance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_vs_Actual_Hours_Variance__c</fullName>
    <formula>Estimated_Hours_Required__c / Actual_Hours_Utilized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Hours vs Actual Hours Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>