force-app/main/default/objects/Case/fields/Google_Space_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Space_Id__c</fullName>
    <formula>Related_to_Opportunity__r.Google_Space_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Space Id</label>
    <type>Text</type>
</CustomField>