force-app/main/default/objects/Case/fields/Google_Space_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Space_Thread_Id__c</fullName>
    <label>Google Space Thread Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>