force-app/main/default/objects/Case/fields/Hours_Worked_So_Far__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_So_Far__c</fullName>
    <description>Field to capture the running hours worked for a case. Goal is to update as additional time is logged. Used for client reporting.</description>
    <inlineHelpText>Field to capture the running hours worked for a case. Goal is to update as additional time is logged. Used for client reporting.</inlineHelpText>
    <label>Hours Worked So Far</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>