force-app/main/default/objects/Case/fields/Incident_Notes__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notes__c</fullName>
    <label>Incident Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>