force-app/main/default/objects/Case/fields/Last_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Step__c</fullName>
    <inlineHelpText>When &quot;next steps&quot; field is updated, we&apos;ll place the previous value here</inlineHelpText>
    <label>Last Step</label>
    <type>TextArea</type>
</CustomField>