force-app/main/default/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <defaultValue>&quot;Define Next Steps&quot;</defaultValue>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>