force-app/main/default/objects/Case/fields/Notepad__c.field-meta.xml
<CustomField>
    <fullName>Notepad__c</fullName>
    <label>Notepad</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>