force-app/main/default/objects/Case/fields/Notes_for_Client_Update__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Client_Update__c</fullName>
    <label>Notes for Client Update!</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>