force-app/main/default/objects/Case/fields/Original_Created_Date_from_migration__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date_from_migration__c</fullName>
    <label>Original Created Date (from migration)</label>
    <type>DateTime</type>
</CustomField>