force-app/main/default/objects/Case/fields/Portal_User_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User Owner</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>