force-app/main/default/objects/Case/fields/Project_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Billing_Type__c</fullName>
    <inlineHelpText>What billing arrangement should be utilized for this request?</inlineHelpText>
    <label>Project Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standing Retainer</fullName>
            </value>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pro-Bono</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>