force-app/main/default/objects/Case/fields/Related_Opportunity_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity LineItem</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>