force-app/main/default/objects/Case/fields/Related_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Opportunities</relationshipLabel>
    <relationshipName>Related_to_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>