force-app/main/default/objects/Case/fields/Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Date__c</fullName>
    <description>Date the client requested the task completed</description>
    <label>Requested Due Date</label>
    <type>DateTime</type>
</CustomField>