force-app/main/default/objects/Case/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date someone began working on the case. This is automatically entered when the case is set to any status other than &quot;new&quot;. That way, we can report # of days to complete from start date, and number of dates/hours from CREATED DATE to START DATE</description>
    <inlineHelpText>The date someone began working on the case. This is automatically entered when the case is set to any status other than &quot;new&quot;. That way, we can report # of days to complete from start date, and number of dates/hours from CREATED DATE to START DATE</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>