force-app/main/default/objects/Case/fields/Supplied_Company__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Company__c</fullName>
    <label>Supplied Company</label>
    <length>120</length>
    <type>Text</type>
</CustomField>