force-app/main/default/objects/Case/fields/Supplied_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Name__c</fullName>
    <label>Supplied Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>