force-app/main/default/objects/Case/fields/Sync_To_External_System__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_External_System__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can be used to designate a batch of records for integration/migration</inlineHelpText>
    <label>Sync To External System?</label>
    <type>Checkbox</type>
</CustomField>