force-app/main/default/objects/Case/fields/Team_Member_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Assigned__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assigned_to_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shyam Sarkar and Scott Haleo</fullName>
            </value>
            <value>
                <fullName>Biren and Prerak | Sigma Solve</fullName>
            </value>
            <value>
                <fullName>Erick Daniel Dela Rosa</fullName>
            </value>
            <value>
                <fullName>Mohsin &amp; Wahid | CloudPrimero</fullName>
            </value>
            <value>
                <fullName>Prasanna | Advanz101</fullName>
            </value>
            <value>
                <fullName>Gunjan / Chetan | CommunicationCrafts</fullName>
            </value>
            <value>
                <fullName>Priyanka Borode</fullName>
            </value>
            <value>
                <fullName>Jerre - Snitcher</fullName>
            </value>
            <value>
                <fullName>Zack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>